wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 2
  selector:
    matchLabels:
      role: wordpress
  template:
    metadata:
      labels:
        role: wordpress
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: wordpress
          image: vihu360/wordpress
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          volumeMounts:
            - name: wordpressfiles
              mountPath: /var/www/html/wp-content
      volumes:
        - name: wordpressfiles
          hostPath:
            path: /home/vihu/k8s-cluster
