wordpress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007 # You can specify a port in the range 30000-32767 or let Kubernetes assign one
  selector:
    role: wordpress
